package nassing.togetherwefall.entities.items;

import jakarta.persistence.Entity;


@Entity
public class Item extends AItem {
    public Item() {
    }
}
